--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "koa-send": "^3.3.0",
     "koa-socket": "^4.4.0",
     "lunr": "^1.0.0",
+    "moment": "^2.17.1",
     "morgan": "^1.8.0",
     "mysql": "^2.13.0",
     "react": "^15.4.2",
